WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200022
Fix WebView iframe rendering in macOS Catalina
https://bugs.webkit.org/show_bug.cgi?id=200022
Summary
Fix WebView iframe rendering in macOS Catalina
Simon Fraser (smfr)
Reported
2019-07-22 18:17:42 PDT
Fix WebView iframe rendering in macOS Catalina
Attachments
Patch
(7.25 KB, patch)
2019-07-22 18:19 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-07-22 18:19:09 PDT
Created
attachment 374660
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-07-22 18:19:10 PDT
<
rdar://problem/49102040
>
EWS Watchlist
Comment 3
2019-07-22 18:22:03 PDT
Attachment 374660
[details]
did not pass style-queue: ERROR: Source/WebKitLegacy/mac/WebView/WebHTMLView.mm:728: Misplaced OS version check. Please use a named macro in wtf/Platform.h, wtf/FeatureDefines.h, or an appropriate internal file. [build/version_check] [5] ERROR: Source/WebKitLegacy/mac/WebView/WebHTMLView.mm:730: Misplaced OS version check. Please use a named macro in wtf/Platform.h, wtf/FeatureDefines.h, or an appropriate internal file. [build/version_check] [5] ERROR: Source/WebKitLegacy/mac/WebView/WebHTMLView.mm:1675: Misplaced OS version check. Please use a named macro in wtf/Platform.h, wtf/FeatureDefines.h, or an appropriate internal file. [build/version_check] [5] ERROR: Source/WebKitLegacy/mac/WebView/WebHTMLView.mm:1677: Misplaced OS version check. Please use a named macro in wtf/Platform.h, wtf/FeatureDefines.h, or an appropriate internal file. [build/version_check] [5] ERROR: Source/WebKitLegacy/mac/WebView/WebHTMLView.mm:1686: Misplaced OS version check. Please use a named macro in wtf/Platform.h, wtf/FeatureDefines.h, or an appropriate internal file. [build/version_check] [5] ERROR: Source/WebKitLegacy/mac/WebView/WebHTMLView.mm:1688: Misplaced OS version check. Please use a named macro in wtf/Platform.h, wtf/FeatureDefines.h, or an appropriate internal file. [build/version_check] [5] Total errors found: 6 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4
2019-07-22 19:08:26 PDT
Comment on
attachment 374660
[details]
Patch Clearing flags on attachment: 374660 Committed
r247712
: <
https://trac.webkit.org/changeset/247712
>
WebKit Commit Bot
Comment 5
2019-07-22 19:08:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug