Cherry-pick r247712. rdar://problem/53647280

Fix WebView iframe rendering in macOS Catalina
    https://bugs.webkit.org/show_bug.cgi?id=200022
    rdar://problem/49102040

    Reviewed by Darin Adler.
    Source/WebKitLegacy/mac:

    Adapt to internal NSView method renames in Catalina.

    * WebView/WebHTMLView.mm:
    (-[WebHTMLView _recursive:displayRectIgnoringOpacity:inContext:stopAtLayerBackedViews:_recursive:displayRectIgnoringOpacity:inContext:shouldChangeFontReferenceColor:stopAtLayerBackedViews:_recursive:displayRectIgnoringOpacity:inContext:shouldChangeFontReferenceColor:_recursive:displayRectIgnoringOpacity:inContext:topView:]):
    (-[WebHTMLView _recursive:displayRectIgnoringOpacity:inContext:shouldChangeFontReferenceColor:stopAtLayerBackedViews:_recursive:displayRectIgnoringOpacity:inContext:shouldChangeFontReferenceColor:_recursive:displayRectIgnoringOpacity:inContext:topView:]): Deleted.

    LayoutTests:

    New test for rendering of overlapping iframes, defects when we fail to setAsideSubviews
    in WebView.

    * fast/frames/frames-not-double-painted-expected.html: Added.
    * fast/frames/frames-not-double-painted.html: Added.

    Canonical link: https://commits.webkit.org/213874@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247712 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.102@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@247963 268f45cc-cd09-0410-ab3c-d52691b4dbfc